--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.10.0",
+    "resolve-url-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.0",
@@ -22,8 +26,11 @@
     "webpack-dev-server": "^3.1.10"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production"
+    "start": "npm run build:dev && npm run serve:dev",
+    "build:prod": "webpack --mode production",
+    "build:dev": "webpack --mode development",
+    "serve:prod": "webpack-dev-server --open --mode production",
+    "serve:dev": "webpack-dev-server --open --mode development"
   },
   "repository": {
     "type": "git",
